--- a/assets/style.css
+++ b/assets/style.css
@@ -40,7 +40,7 @@
     color:#d6cccd;
     background-color : #262436;
     padding-left: 40px;
-    font-size: 25px;
+    font-size: 20Spx;
     
    }
    
